<resources>
    <string name="app_name">Gndec Hub</string>
    <string name="logintitlename">Login</string>
    <string name="loginsubtitlename">Login to get started</string>
    <string name="tvemail">Email / Phone Number</string>
    <string name="emailhint">Enter Email or Phone Number</string>
    <string name="tvforget">Forgot Password?</string>
    <string name="tvpassword">Password</string>
    <string name="passhint">Enter Password</string>
    <string name="btnlogin">Login</string>
    <string name="tvcreate">New Student</string>
    <string name="btnregister">Register</string>
    <string name="applogo">App Logo</string>
    <string name="tvforgetemailsubtitle">Enter your registered email to reset password</string>
    <string name="forgetemailtitlehint">Email Address</string>
    <string name="btnforgottext">Send Reset Link</string>
    <string name="txteditprofile">Edit Profile</string>
    <string name="hintfullname">Full Name</string>
    <string name="hintemail">Email Address</string>
    <string name="btnupdate">Update Profile</string>
    <string name="hintmobilenumber">Mobile Number</string>
    <string name="goback">Go Back</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="signintocontinue">Sign in to continue your journey</string>
    <string name="createaccount">Create Account</string>
    <string name="deatilsfill">Please fill in the details below</string>
    <string name="clsroll">Class Roll Number</string>
    <string name="urn">University Roll Number</string>
    <string name="course">Course</string>
    <string name="sem">Sem</string>
    <string name="selectcourse">Select Course</string>
    <string name="joinus">Join Us</string>
    <string name="getstarted">Create an account to get started</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address"></string>
    <string name="alreadyaccount">Already have an account?</string>
    <string name="termcondition">I agree with the Terms and Conditions</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_name">gnecollgeg</string>
    <string name="user_gmail">principal@gndec.ac.in</string>
</resources>